fix floatToy alignment

--- a/components/FloatToy/style.module.scss
+++ b/components/FloatToy/style.module.scss
@@ -21,12 +21,31 @@
     margin: 60px 0 30px 0;
     display: block;
     font-size: 1.5em;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+    margin-block: 0.85em;
+    margin-inline: 0px;
     font-weight: bold;
     unicode-bidi: isolate;
+  }
+
+  .options {
+    display: inline-flex;
+    font-size: 0.75em;
+    margin-left: 1em;
+    font-weight: normal;
+    border: 2px groove;
+
+    legend {
+      font-size: 0.8em;
+      font-weight: lighter;
+    }
+
+    label {
+      user-select: none;
+      padding: 0.25ex 0.8ex;
+    }
+    input {
+      margin-left: 0.5em;
+    }
   }
 
   .input-area {
@@ -131,7 +150,7 @@
     display: flex;
     flex-direction: row;
     @supports (align-items: last baseline) {
-      align-items: last baseline;
+      align-items: last baseline !important;
     }
     align-items: flex-end;
     justify-content: flex-start;
